// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spartacus CDC schematics: ng-add CDC feature eager loading should import appropriate modules 1`] = `
"import { NgModule } from '@angular/core';
import { CdcModule } from \\"@spartacus/cdc\\";
import { CdcConfig, CdcRootModule } from \\"@spartacus/cdc/root\\";
import { provideConfig } from \\"@spartacus/core\\";

@NgModule({
  declarations: [],
  imports: [
    CdcRootModule,
    CdcModule
  ],
  providers: [provideConfig(<CdcConfig>{
    cdc: [
      {
        baseSite: 'electronics-spa',
        javascriptUrl: '<url-to-cdc-script>',
        sessionExpiration: 3600
      },
    ],
  })]
})
export class CdcFeatureModule { }
"
`;

exports[`Spartacus CDC schematics: ng-add CDC feature general setup should add the feature using the lazy loading syntax 1`] = `
"import { NgModule } from '@angular/core';
import { CdcConfig, CdcRootModule, CDC_FEATURE } from \\"@spartacus/cdc/root\\";
import { CmsConfig, provideConfig } from \\"@spartacus/core\\";

@NgModule({
  declarations: [],
  imports: [
    CdcRootModule
  ],
  providers: [provideConfig(<CmsConfig>{
    featureModules: {
      [CDC_FEATURE]: {
        module: () =>
          import('@spartacus/cdc').then((m) => m.CdcModule),
      },
    }
  }),
  provideConfig(<CdcConfig>{
    cdc: [
      {
        baseSite: 'electronics-spa',
        javascriptUrl: '<url-to-cdc-script>',
        sessionExpiration: 3600
      },
    ],
  })
  ]
})
export class CdcFeatureModule { }
"
`;

exports[`Spartacus CDC schematics: ng-add CDC feature general setup should install the required feature dependencies 1`] = `
"import { NgModule } from '@angular/core';
import { CmsConfig, I18nConfig, provideConfig } from \\"@spartacus/core\\";
import { userAccountTranslationChunksConfig, userAccountTranslations } from \\"@spartacus/user/account/assets\\";
import { UserAccountRootModule, USER_ACCOUNT_FEATURE } from \\"@spartacus/user/account/root\\";
import { userProfileTranslationChunksConfig, userProfileTranslations } from \\"@spartacus/user/profile/assets\\";
import { UserProfileRootModule, USER_PROFILE_FEATURE } from \\"@spartacus/user/profile/root\\";

@NgModule({
  declarations: [],
  imports: [
    UserAccountRootModule,
    UserProfileRootModule
  ],
  providers: [provideConfig(<CmsConfig>{
    featureModules: {
      [USER_ACCOUNT_FEATURE]: {
        module: () =>
          import('@spartacus/user/account').then((m) => m.UserAccountModule),
      },
    }
  }),
  provideConfig(<I18nConfig>{
    i18n: {
      resources: userAccountTranslations,
      chunks: userAccountTranslationChunksConfig,
    },
  }),
  provideConfig(<CmsConfig>{
    featureModules: {
      [USER_PROFILE_FEATURE]: {
        module: () =>
          import('@spartacus/user/profile').then((m) => m.UserProfileModule),
      },
    }
  }),
  provideConfig(<I18nConfig>{
    i18n: {
      resources: userProfileTranslations,
      chunks: userProfileTranslationChunksConfig,
    },
  })
  ]
})
export class UserFeatureModule { }
"
`;
